<resources>
    <string name="app_name">CoronaZP20T</string>
    <string name="app_title">Infection online status</string>
    <string name="app_vardas">Infection Online Status</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_checkbox">Remember me</string>
    <string name="login_login_btn">Login</string>
    <string name="login_register_btn">Register</string>
    <string name="login_invalid_username">Wrong username or/and password</string>
    <string name="register">Please register. Enter you data bellow:</string>
    <string name="register_username">Username:</string>
    <string name="register_email">E-mail:</string>
    <string name="register_password">Password:</string>
    <string name="login_success">Login is successful! Well done!</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="new_user">New user registered successful!</string>
    <string name="search_loading_data">Please wait for COVID-19 data to be displayed.</string>
    <string name="search_error_reading_data">Could not read data form API. For more information:</string>
    <string name="search_no_results">No search results found for query: </string>
    <string name="search_found_entries_from_api">Found total numbers of corona entries: </string>

    <string name="new_entry_country">Country:</string>
    <string name="new_entry_country_lithuania">Lithuania</string>
    <string name="new_entry_country_latvia">Latvia</string>
    <string name="new_entry_country_estonia">Estonia</string>
    <string name="new_entry_country_poland">Poland</string>
    <string name="new_entry_deaths">Deaths:</string>
    <string name="new_entry_deaths_100">100</string>
    <string name="new_entry_deaths_500">500</string>
    <string name="new_entry_deaths_1000">1000</string>
    <string name="new_entry_deaths_2000">2000</string>
    <string name="new_entry_last_update">Last update:</string>
    <string-array name="new_entry_last_update_date">
        <item>2020-12-21T05:25:04+00:00</item>
        <item>2020-12-20T05:25:04+00:00</item>
        <item>2020-12-19T05:25:04+00:00</item>
        <item>2020-12-18T05:25:04+00:00</item>
        <item>2020-12-17T05:25:04+00:00</item>
        <item>2020-12-16T05:25:04+00:00</item>
    </string-array>
    <string name="new_entry_confirmed">Confirmed:</string>
    <string name="selected">Display selected</string>


</resources>
